--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
-    <title>Meaningful Title</title>
+    <title>My Home Page</title>
     <meta name="description" content="description of page using keywords" />
     <meta name="author" content="James Phillip K. De Guzman" />
     <link rel="stylesheet" href="styles/filename" />
