Fixed html and css errors in page audit

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/layout.css">
-    <title>Basic Layout</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="styles/layout.css" />
+    <title>Basic Layout | James Phillip De Guzman | WDD 131</title>
   </head>
   <body>
     <header class="box-1-header" contenteditable>
-        <p>Header content</p>
+      <p>Header content</p>
     </header>
+    <nav class="nav-links box-2-nav" contenteditable>
+      <a href="#">Home</a>
+      <a href="#">Projects</a>
+      <a href="#">Services</a>
+      <a href="#">Contact Us</a>
+    </nav>
     <div class="grid-container">
-
-        <nav class="nav-links box-2-nav" contenteditable>
-          <a href="#">Home</a>
-          <a href="#">Projects</a>
-          <a href="#">Services</a>
-          <a href="#">Contact Us</a>
-        </nav>
-
-
       <main class="box-3-main" contenteditable>
+        <h1>James Phillip De Guzman | WDD 131</h1>
+        <img
+          class="img-me-caleb"
+          src="/images/Caleb_and_Daddy.jpg"
+          alt="Me and my third child, Caleb"
+        />
         <p>Main content</p>
       </main>
 
