Renamed image to use hyphen instead of underscore for file readability

--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -21,7 +21,7 @@
         <h1>James Phillip De Guzman | WDD 131</h1>
         <img
           class="img-me-caleb"
-          src="/images/Caleb_and_Daddy.jpg"
+          src="/images/Caleb-and-daddy.jpg"
           alt="Me and my third child, Caleb"
         />
         <p>Main content</p>
