--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -7,16 +7,17 @@
     <title>Basic Layout | James Phillip De Guzman | WDD 131</title>
   </head>
   <body>
-    <header class="box-1-header" contenteditable>
-      <p>Header content</p>
-    </header>
-    <nav class="nav-links box-2-nav" contenteditable>
-      <a href="#">Home</a>
-      <a href="#">Projects</a>
-      <a href="#">Services</a>
-      <a href="#">Contact Us</a>
-    </nav>
     <div class="grid-container">
+      <header class="box-1-header" contenteditable>
+        <p>Header contents</p>
+      </header>
+      <nav class="box-2-nav" contenteditable>
+        <a href="#">Home</a>
+        <a href="#">Projects</a>
+        <a href="#">Services</a>
+        <a href="#">Contact Us</a>
+      </nav>
+
       <main class="box-3-main" contenteditable>
         <h1>James Phillip De Guzman | WDD 131</h1>
         <img
