--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -8,33 +8,47 @@
   </head>
   <body>
     <div class="grid-container">
-      <header class="box-1-header" contenteditable>
-        <p>Header contents</p>
+      <div class="box-1-header"><p>Header contents</p></div>
+      <header class="box-2-nav">
+        <nav class="box-2-navlinks">
+          <a href="#">Home</a>
+          <a href="#">Projects</a>
+          <a href="#">Services</a>
+          <a href="#">Contact Us</a>
+        </nav>
       </header>
-      <nav class="box-2-nav" contenteditable>
-        <a href="#">Home</a>
-        <a href="#">Projects</a>
-        <a href="#">Services</a>
-        <a href="#">Contact Us</a>
-      </nav>
 
-      <main class="box-3-main" contenteditable>
+      <main class="box-3-main">
         <h1>James Phillip De Guzman | WDD 131</h1>
-        <img
-          class="img-me-caleb"
-          src="/images/Caleb-and-daddy.jpg"
-          alt="Me and my third child, Caleb"
-        />
-        <p>Main content</p>
+        <div class="container-card">
+          <section class="card1">
+            <img
+              class="img-me-caleb"
+              src="/images/Caleb-and-daddy2.jpg"
+              alt="Me and my third child, Caleb"
+            />
+            <p>This is my photo together with my newborn child, Caleb</p>
+          </section>
+          <section class="card2">
+            <img
+              src="/images/philippines.png"
+              alt="The Philippines: This is where I was born."
+            />
+            <p>
+              This is my country where I was born. I live in a province called
+              Iloilo, which is located in Region VI, Western Visayas
+            </p>
+          </section>
+        </div>
       </main>
 
       <aside>
-        <div class="box-4-aside" contenteditable>
+        <div class="box-4-aside">
           <p>Aside content</p>
         </div>
       </aside>
 
-      <footer class="box-5-footer" contenteditable>
+      <footer class="box-5-footer">
         <p>Footer content</p>
       </footer>
     </div>
