--- a/week01/basic-layout.html
+++ b/week01/basic-layout.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" type="text/css" href="styles/layout.css" />
+    <meta author="James Phillip De Guzman" />
+    <meta
+      description="This is a basic layout html created by James Phillip De Guzman for WDD 131 course"
+    />
+    <link rel="stylesheet" href="styles/base.css" />
     <title>Basic Layout | James Phillip De Guzman | WDD 131</title>
   </head>
   <body>
