Added max width

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
             <p>
               The Philippines, an archipelago in Southeast Asia, is culturally
               diverse, with over 7,000 islands. Filipino and English are its
-              official languages, but it's home to approximately 120 to 175
-              languages overall, reflecting its rich linguistic heritage.
+              official languages.
             </p>
           </article>
         </section>
