Added my name in About Me

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
               src="images/James.jpg"
               alt="Photo of James Phillip De Guzman"
             >
-            <h3>About me</h3>
+            <h3>James Phillip De Guzman</h3>
             <p>
               I am an aspiring web developer who loves to learn about html, css
               and javascript! With great passion for learning and a
