--- a/week02/practice-js.html
+++ b/week02/practice-js.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="James Phillip De Guzman" />
-    <meta name="description" content="Practice  JavaScript Examples" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="James Phillip De Guzman">
+    <meta name="description" content="Practice  JavaScript Examples">
     <title>Practice JavaScript Examples</title>
-    <link rel="stylesheet" href="../styles/practice.js.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="stylesheet" href="../styles/practice.js.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap"
       rel="stylesheet"
-    />
+    >
     <script src="../scripts/getdates.js" defer></script>
   </head>
   <body>
