added aria-label "menu" for accessibility for button

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -16,7 +16,7 @@
 <body>
 <header>
 <h1>Temple Album</h1>
-<button id="menu"></button>
+<button id="menu" aria-label="menu"></button>
 
 <nav class="navigation">
 
