Fixed hamburger menu

--- a/week02/temples.html
+++ b/week02/temples.html
@@ -15,56 +15,61 @@
 </head>
 <body>
 <header>
-<h1>Temple Album</h1>
+
 <button id="menu" aria-label="menu"></button>
 
-<nav class="navigation">
+<div class="flex-wrapper">
 
-  <ul>
-    <li><a href="#" id="home" class="active">Home</a></li>
-    <li><a href="#" id="old">Old</a></li>
-    <li><a href="#" id="new">New</a></li>
-    <li><a href="#" id="large">Large</a></li>
-    <li><a href="#" id="small">Small</a></li>
+<nav class="navigation">
+<h1>Temple Album</h1>
+  <ul class="navlinks">
+    <li><a href="#" title="home" class="active">Home</a></li>
+    <li><a href="#" title="old">Old</a></li>
+    <li><a href="#" title="new">New</a></li>
+    <li><a href="#" title="large">Large</a></li>
+    <li><a href="#" title="small">Small</a></li>
   </ul>
 </nav>
+</div>
+<h2>Home</h2>
 </header>
 <main>
 
+
     <figure class="temple">
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="300" height="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="250" height="200">
         <figcaption>Manila Temple</figcaption>
     </figure>
     <figure class="temple">
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="300" height="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="250" height="200">
         <figcaption>Manila Temple</figcaption>
     </figure>
     <figure class="temple">
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="300" height="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="250" height="200">
         <figcaption>Manila Temple</figcaption>
     </figure>
     <figure class="temple">
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="300" height="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="250" height="200">
         <figcaption>Manila Temple</figcaption>
     </figure>
     <figure class="temple">
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="300" height="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="250" height="200">
         <figcaption>Manila Temple</figcaption>
     </figure>
     <figure class="temple">
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="300" height="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="250" height="200">
         <figcaption>Manila Temple</figcaption>
     </figure>
     <figure class="temple">
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="300" height="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="250" height="200">
         <figcaption>Manila Temple</figcaption>
     </figure>
     <figure class="temple">
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="300" height="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="250" height="200">
         <figcaption>Manila Temple</figcaption>
     </figure>
     <figure class="temple">
-        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="300" height="200">
+        <img src="https://content.churchofjesuschrist.org/templesldsorg/bc/Temples/photo-galleries/manila-philippines/1280x800/manila-philippines-temple-lds-919379-wallpaper.jpg" alt="Picture of: Manila Philippines Temple" width="250" height="200">
         <figcaption>Manila Temple</figcaption>
     </figure>
 
