--- a/place.html
+++ b/place.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" >
+    <meta charset="utf-8" >
     <meta name="viewport" content="width=device-width,initial-scale=1.0" >
     <title>Place: Banaue Rice Terraces, Philippines</title>
     <meta
@@ -32,12 +32,12 @@
           >
           <source
             srcset="images/philippines-medium.webp 1000w"
-            media="(min-width: 600px)" sizes="600px"
+            media="(min-width: 100px)" sizes="600px"
           >
-          <source
+          <!-- <source
             srcset="images/philippines-small.webp 500w"
             media="(min-width: 500px)" sizes="500px"
-          >
+          > -->
           <img
             src="images/philippines-large.webp"
             alt="Country name: Philippines"
@@ -46,9 +46,10 @@
           >
         </picture>
         <section id="card1">
-          <h2 class="data-title">Data <img src="images/philippines_icon.svg" alt="data about the Philippines" width="24" height="24"></h2>
-          <!-- <h3 id="title-header">Data</h3> -->
+          <h2 class="data-title-philippines">Data <img src="images/philippines_icon.svg" alt="data about the Philippines" width="24" height="24"></h2>
+
           <div class="data-box-1">
+            <h3 id="title-header-data">Data</h3>
             <div class="row">
               <div class="col1">Area:</div>
               <div class="col2">300,000 km²</div>
@@ -117,9 +118,10 @@
 
 
         <section id="card2">
-          <h2 class="data-title">Weather <img src="images/weather_clouds_sun_sunny_icon.svg" alt="sunny and/or cloudy weather" width="32" height="32"></h2>
-          <!-- <h3 id="title-header">Weather</h3> -->
+          <h2 class="data-title-weather">Weather <img src="images/weather_clouds_sun_sunny_icon.svg" alt="sunny and/or cloudy weather" width="32" height="32"></h2>
+
           <div class="data-box-2">
+            <h3 id="title-header-weather">Weather</h3>
             <div class="row">
               <div class="col1">Temperature:</div>
               <div class="col2" id="temperature">32°C</div>
