--- a/place.html
+++ b/place.html
@@ -3,9 +3,7 @@
   <head>
     <meta charset="UTF-8" >
     <meta name="viewport" content="width=device-width,initial-scale=1.0" >
-    <meta
-      name="description"
-      content="Place Page: Banaue Rice Terraces, Philippines"
+    <meta name="description" content="Place Page: Banaue Rice Terraces, Philippines"
     >
     <meta name="author" content="James Phillip K. De Guzman" >
     <link rel="stylesheet" href="styles/place-large.css" >
