Adding Coding Fantasy Game link

--- a/index.html
+++ b/index.html
@@ -92,6 +92,11 @@
           <nav class="navlinks-sidebar">
             <ul>
               <li>
+                <a href="https://codingfantasy.com/games">
+                  Coding Fantasy Games
+                </a>
+              </li>
+              <li>
                 <a href="https://byui-cse.github.io/wdd131-ww-course/"
                   >Course Content Home
                 </a>
@@ -101,6 +106,7 @@
                   >HTML Tutorial</a
                 >
               </li> -->
+
               <li>
                 <a href="https://www.w3schools.com/css/default.asp"
                   >CSS Tutorial</a
