My project updated v1.0

--- a/filtered-temples.html
+++ b/filtered-temples.html
@@ -31,21 +31,23 @@
   </ul>
 </nav>
 </div>
-<h2 id="filter-title">Home</h2>
 </header>
-
+<h2 id="filter-title">Home</h2>
+<h3 id="reveal"></h3>
 <div id="imageContainer"></div>
-<main></main>
+<main>
+</main>
+
 
 <footer>
-        <p>
-          ©<span id="currentyear"></span> 🎻 James Phillip De Guzman 🎻
-          Philippines
-        </p>
-        <p class="lastmodified">
-          Last Modified: <span id="lastModified"></span>
-        </p>
-      </footer>
+<p>
+  ©<span id="currentyear"></span> 🎻 James Phillip De Guzman 🎻
+  Philippines
+</p>
+<p class="lastmodified">
+  Last Modified: <span id="lastModified"></span>
+</p>
+</footer>
 
 </body>
 </html>
