Fixed hamburger icon

--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -32,10 +32,10 @@
             <!-- <li><a href="#">Sign Up</a></li> -->
 
         </ul>
-
+        <button id="menu" aria-label="menu"></button>
     </nav>
-    <button id="signup-btn">Sign Up</button>
-    <button id="menu" aria-label="menu"></button>
+    <button class="signup-btn">Sign Up</button>
+
 
 
 
