Added index.html, about.html, contact.html and portfolios.html

--- a/project/desktop-layout.html
+++ b/project/desktop-layout.html
@@ -16,37 +16,49 @@
 </head>
 <body>
 
-<button id="menu" aria-label="menu"></button>
+
 <div class="page-wrap">
 <header>
 
     <nav class="navigation">
+
         <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="50" height="50"></div>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Sign Up</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="portfolios.html">Portfolios</a></li>
+
         </ul>
+        <button id="menu" aria-label="menu"></button>
     </nav>
+    <button class="signup-btn">Sign Up</button>
+
+
+
+
 </header>
+
 
 
 
 <main>
 
-    <div class="top-section">
-        <img src="images/site-planning.webp" alt="picture of a notebook with wireframe sketches" width="200" height="100">
+    <div class="hero">
+        <div class="image-container">
+            <h1>Site Plan</h1>
+            <img src="images/site-planning.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
+        </div>
 
-        <h1>Site Plan</h1>
     </div>
 
     <div class="layout-section">
         <h2>Desktop Layout</h2>
 
        <img src="images/svg/about-page.svg" alt="picture of desktop layout for my website" width="500" height="400">
-       <a href="siteplan.html" >Go back</a></li>
+       <div class="back">
+        <a href="siteplan.html" >Go back</a>
+       </div>
 
     </div>
 
