--- a/project/contact.html
+++ b/project/contact.html
@@ -18,17 +18,17 @@
 
 
 <div class="page-wrap">
+
 <header>
 
     <nav class="navigation">
 
-        <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="50" height="50"></div>
+        <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="100" height="100"></div>
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
             <li><a href="portfolios.html">Portfolios</a></li>
-
 
         </ul>
         <button id="menu" aria-label="menu"></button>
@@ -46,25 +46,22 @@
 
     <div class="hero">
         <div class="image-container">
-            <h1>besys.tech</h1>
+            <h1>Contact James</h1>
             <img src="images/site-planning.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
         </div>
 
     </div>
 
-    <div class="layout-section">
-        <h2>Mobile Layout</h2>
+    <div class="bottom-section">
 
-       <img src="images/svg/mobile-layout.svg" alt="picture of desktop layout for my website" width="400" height="400">
-       <div class="back">
-        <a href="siteplan.html" >Go back</a>
-       </div>
+        <h2>Sorry, under construction...</h2>
 
     </div>
 
 </main>
 </div>
 <div class="wireframe-overlay"></div>
+
 
 <footer>
     <div class="footer-wrapper">
@@ -89,5 +86,6 @@
 
     </div>
 </footer>
+
 </body>
 </html>
