--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -23,21 +23,17 @@
 
     <nav class="navigation">
 
-        <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="50" height="50"></div>
+        <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="100" height="100"></div>
         <ul>
-            <li><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="#">About</a></li>
             <li><a href="#">Contact</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <!-- <li><a href="#">Sign Up</a></li> -->
+            <li><a href="#">Portfolios</a></li>
 
         </ul>
         <button id="menu" aria-label="menu"></button>
     </nav>
     <button class="signup-btn">Sign Up</button>
-
-
-
 
 </header>
 
@@ -45,10 +41,12 @@
 
 <main>
 
-    <div class="top-section">
-        <img src="images/site-planning.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
+    <div class="hero">
+        <div class="image-container">
+            <h1>My Site Plan</h1>
+            <img src="images/site-planning.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
+        </div>
 
-        <h1>My Site Plan</h1>
     </div>
 
     <div class="bottom-section">
@@ -70,12 +68,14 @@
         <p class="title">Color Scheme:</p>
         <p class="desc">I will use carmine: <span id="color1">#931621ff</span> dark-slate-gray: <span id="color2">#28464bff</span> as my primary and secondary colors.</p>
         <p class="title">Typography:</p>
-        <p class="desc">I will use Roboto, Arial, sans-serif and Poppins, sans-serif as my primary and secondary fonts.</p>        <p class="title">Wireframe:</p>
-
+        <p class="desc">I will use Roboto, Arial, sans-serif and Poppins, sans-serif as my primary and secondary fonts.</p>
+        <p class="title">Wireframes:</p>
+        <div class="wireframe">
             <ul>
                 <li><a href="desktop-layout.html" >Desktop Layout</a></li>
                 <li><a href="mobile-layout.html" >Mobile Layout</a></li>
             </ul>
+        </div>
 
     </div>
 
