--- a/project/index.html
+++ b/project/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Site Plan</title>
-<meta name="description" content="Site Plan For: besys.tech">
+<meta name="description" content="Home page: Landing page for my web portfolio site">
 <meta name="author" content="James Phillip K. De Guzman">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
