--- a/project/siteplan.html
+++ b/project/siteplan.html
@@ -26,9 +26,9 @@
         <div class="logo"><img src="images/besys-tech-logo.svg" alt="company logo" width="100" height="100"></div>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-            <li><a href="#">Portfolios</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="portfolios.html">Portfolios</a></li>
 
         </ul>
         <button id="menu" aria-label="menu"></button>
