--- a/project/about.html
+++ b/project/about.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Site Plan</title>
+<title>About Page</title>
 <meta name="description" content="About page: James De Guzman, a budding developer, accepts freelancing work or web projects">
 <meta name="author" content="James Phillip K. De Guzman">
 <link rel="preconnect" href="https://fonts.googleapis.com">
