--- a/project/desktop-layout.html
+++ b/project/desktop-layout.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Site Plan</title>
+<title>Site Plan: Desktop Layout</title>
 <meta name="description" content="Sample wireframe: desktop layout of my website">
 <meta name="author" content="James Phillip K. De Guzman">
 <link rel="preconnect" href="https://fonts.googleapis.com">
