--- a/project/portfolios.html
+++ b/project/portfolios.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Site Plan</title>
+<title>Portfolios Page</title>
 <meta name="description" content="Portfolios page: Website projects created by James De Guzman">
 <meta name="author" content="James Phillip K. De Guzman">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -60,84 +60,132 @@
         <div class="portfolio-container">
             <div class="portfolio-items">
                     <div class="titlediv">
-                        <h3 class="project-title">Portfolio 1
+                        <!--Portfolio 1-->
+                        <h3 class="project-title">Portfolio 1: Place page
                     </div>
                     <div class="picturediv">
-                        <img src="images/project-images/portfolio-1.webp" alt="Project image of: Portfolio 1" loading="lazy" width="300" height="200">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd131/place.html" target="_blank">
+                            <img
+                                src="images/project-images/portfolio-1.webp"
+                                alt="Portfolio 1: place.html"
+                                width="300"
+                                height="200"
+                                loading="lazy">
+                        </a>
                     </div>
                     <div class="descdiv">
                         <p class="project-desc">
-                            This website portfolio is Lorem ipsum, dolor sit amet consectetur adipisicing elit. Minus, tempore!
+                            This website portfolio uses picture and srcset in order to load different picture sizes. The site is about my dream destination, Banaue Rice Terraces in the Philippines!
                         </p>
                     </div>
                 </h3>
             </div>
             <div class="portfolio-items">
                     <div class="titlediv">
-                        <h3 class="project-title">Portfolio 2
+                        <!--Portfolio 2-->
+                        <h3 class="project-title">Portfolio 2: WDD131 homepage
                     </div>
                     <div class="picturediv">
-                        <img src="images/project-images/portfolio-2.webp" alt="Project image of: Portfolio 2" loading="lazy" width="300" height="270">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd131/index.html" target="_blank">
+                            <img
+                                src="images/project-images/portfolio-2.webp"
+                                alt="Portfolio 2: index.html"
+                                width="300"
+                                height="270"
+                                loading="lazy">
+                        </a>
                     </div>
                     <div class="descdiv">
                         <p class="project-desc">
-                            This website portfolio is Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consequuntur, assumenda.
+                            This is a simple HTML personal homepage I've created for my course Dynamic Web Fundamentals (WDD131) in BYU-Idaho Spring Semester 2024.
                         </p>
                     </div>
                 </h3>
             </div>
             <div class="portfolio-items">
                     <div class="titlediv">
-                        <h3 class="project-title">Portfolio 3
+                        <!--Portfolio 3-->
+                        <h3 class="project-title">Portfolio 3: Filtered Temples page
                     </div>
                     <div class="picturediv">
-                        <img src="images/project-images/portfolio-3.webp" alt="Project image of: Portfolio 3" loading="lazy" width="300" height="270">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd131/filtered-temples.html" target="_blank">
+                            <img
+                                src="images/project-images/portfolio-3.webp"
+                                alt="Portfolio 3: "
+                                width="300"
+                                height="270"
+                                loading="lazy">
+                        </a>
                     </div>
                     <div class="descdiv">
                         <p class="project-desc">
-                            This website portfolio is Lorem, ipsum dolor sit amet consectetur adipisicing elit. Vero, nam?
+                            This website portfolio uses filtering of array objects in JavaScript.
                         </p>
                     </div>
                 </h3>
             </div>
             <div class="portfolio-items">
                     <div class="titlediv">
-                        <h3 class="project-title">Portfolio 4
+                        <!--Portfolio 4-->
+                        <h3 class="project-title">Portfolio 4: Unfiltered Temples page
                     </div>
                     <div class="picturediv">
-                        <img src="images/project-images/portfolio-4.webp" alt="Project image of: Portfolio 4" loading="lazy" width="300" height="270">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd131/temples.html" target="_blank">
+                            <img
+                                src="images/project-images/portfolio-4.webp"
+                                alt="Portfolio 4: "
+                                width="300"
+                                height="270"
+                                loading="lazy">
+                        </a>
                     </div>
                     <div class="descdiv">
                         <p class="project-desc">
-                            This website portfolio is Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic, est?
+                            This website portfolio is the beta version of the Filtered Temples page.
                         </p>
                     </div>
                 </h3>
             </div>
             <div class="portfolio-items">
                     <div class="titlediv">
-                        <h3 class="project-title">Portfolio 5
+                        <!--Portfolio 5-->
+                        <h3 class="project-title">Portfolio 5: Holy Grail Layout (Practice)
                     </div>
                     <div class="picturediv">
-                        <img src="images/project-images/portfolio-5.webp" alt="Project image of: Portfolio 5" loading="lazy" width="300" height="270">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd131/csspractice/holy-grail-layout-flex.html" target="_blank">
+                            <img
+                                src="images/project-images/portfolio-5.webp"
+                                alt="Portfolio 5: "
+                                width="300"
+                                height="270"
+                                loading="lazy">
+                        </a>
                     </div>
                     <div class="descdiv">
                         <p class="project-desc">
-                            This website portfolio is Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores, iure.
+                            This is only a practice website to create my first holy grail layout in HTML.
                         </p>
                     </div>
                 </h3>
             </div>
             <div class="portfolio-items">
                     <div class="titlediv">
-                        <h3 class="project-title">Portfolio 6
+                        <!--Portfolio 6-->
+                        <h3 class="project-title">Portfolio 6: Whitewater Rafting Site (WDD130)
                     </div>
                     <div class="picturediv">
-                        <img src="images/project-images/portfolio-6.webp" alt="Project image of: Portfolio 6" loading="lazy" width="300" height="270">
+                        <a href="https://jamesphillipdeguzman.github.io/wdd130/wwr/index.html" target="_blank">
+                            <img
+                                src="images/project-images/portfolio-6.webp"
+                                alt="Portfolio 6: "
+                                width="300"
+                                height="270"
+                                loading="lazy">
+                        </a>
                     </div>
                     <div class="descdiv">
                         <p class="project-desc">
-                            This website portfolio is Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, esse?
+                            This website portfolio is my project in Web Fundamentals (WDD130).
                         </p>
                     </div>
                 </h3>
