--- a/project/contact.html
+++ b/project/contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Site Plan</title>
+<title>Contact Page</title>
 <meta name="description" content="Contact page: Contact James De Guzman through mobile, phone and email">
 <meta name="author" content="James Phillip K. De Guzman">
 <link rel="preconnect" href="https://fonts.googleapis.com">
