--- a/project/portfolios.html
+++ b/project/portfolios.html
@@ -50,12 +50,26 @@
             <img src="images/site-planning.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
         </div>
 
+
     </div>
 
     <div class="bottom-section">
 
-        <h2>Choose a website portfolio</h2>
+        <h2 id="choose">Choose a website portfolio</h2>
+        <div class="dropdown-container">
+            <select>
+                <option value="">Select a portfolio</option>
+                <option value="Place page">Portfolio 1</option>
+                <option value="WDD131 home page">Portfolio 2</option>
+                <option value="Filtered temples page">Portfolio 3</option>
+                <option value="Unfiltered temples page">Portfolio 4</option>
+                <option value="Holy grail layout (practice)">Portfolio 5</option>
+                <option value="Whitewater rafting site (WDD130)">Portfolio 6</option>
+            </select>
+            <button id="portfolio-btn">Select</button>
+        </div>
 
+        <div class="image-loader"></div>
         <!-- Create a grid for the websites -->
         <div class="portfolio-container">
             <div class="portfolio-items">
@@ -83,7 +97,7 @@
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 2-->
-                        <h3 class="project-title">Portfolio 2: WDD131 homepage
+                        <h3 class="project-title">Portfolio 2: WDD131 home page
                     </div>
                     <div class="picturediv">
                         <a href="https://jamesphillipdeguzman.github.io/wdd131/index.html" target="_blank">
@@ -105,7 +119,7 @@
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 3-->
-                        <h3 class="project-title">Portfolio 3: Filtered Temples page
+                        <h3 class="project-title">Portfolio 3: Filtered temples page
                     </div>
                     <div class="picturediv">
                         <a href="https://jamesphillipdeguzman.github.io/wdd131/filtered-temples.html" target="_blank">
@@ -127,7 +141,7 @@
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 4-->
-                        <h3 class="project-title">Portfolio 4: Unfiltered Temples page
+                        <h3 class="project-title">Portfolio 4: Unfiltered temples page
                     </div>
                     <div class="picturediv">
                         <a href="https://jamesphillipdeguzman.github.io/wdd131/temples.html" target="_blank">
@@ -149,7 +163,7 @@
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 5-->
-                        <h3 class="project-title">Portfolio 5: Holy Grail Layout (Practice)
+                        <h3 class="project-title">Portfolio 5: Holy grail layout (practice)
                     </div>
                     <div class="picturediv">
                         <a href="https://jamesphillipdeguzman.github.io/wdd131/csspractice/holy-grail-layout-flex.html" target="_blank">
@@ -171,7 +185,7 @@
             <div class="portfolio-items">
                     <div class="titlediv">
                         <!--Portfolio 6-->
-                        <h3 class="project-title">Portfolio 6: Whitewater Rafting Site (WDD130)
+                        <h3 class="project-title">Portfolio 6: Whitewater rafting site (WDD130)
                     </div>
                     <div class="picturediv">
                         <a href="https://jamesphillipdeguzman.github.io/wdd130/wwr/index.html" target="_blank">
