Fixed filtered text overlapping texts

--- a/project/portfolios.html
+++ b/project/portfolios.html
@@ -69,7 +69,9 @@
             <button id="portfolio-btn">Select</button>
         </div>
 
+        <!-- Create dynamic text content here -->
         <div class="image-loader"></div>
+
         <!-- Create a grid for the websites -->
         <div class="portfolio-container">
             <div class="portfolio-items">
