--- a/project/about.html
+++ b/project/about.html
@@ -46,16 +46,17 @@
 
     <div class="hero">
         <div class="image-container">
-            <h1>James De Guzman</h1>
-            <img src="images/site-planning.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
+            <h1 id="hero-pic">James De Guzman</h1>
+            <img src="images/project-images/james.webp" alt="Picture of: James Phillip De Guzman" width="300" height="200">
         </div>
 
     </div>
 
     <div class="bottom-section">
-
-        <h2>Sorry, under construction...</h2>
-
+        <article class="my-profile">
+        <h2>Software Engineer </h2>
+        <p>I am a budding web developer who wants to create helpful websites and apps for my community. </p>
+        </article>
     </div>
 
 </main>
