--- a/project/index.html
+++ b/project/index.html
@@ -46,16 +46,17 @@
 
     <div class="hero">
         <div class="image-container">
-            <h1>besys.tech</h1>
-            <img src="images/site-planning.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
+            <h1 id="hero-logo">besys.tech</h1>
+            <img src="images/besys-tech-logo.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
         </div>
 
     </div>
 
     <div class="bottom-section">
-
-        <h2>Sorry, under construction...</h2>
-
+        <article class="my-company">
+        <h2>besys.tech</h2>
+        <p>Besys tech is the alternate name for James De Guzman's startup tech company, which  aims to create helpful websites and apps for my community. </p>
+        </article>
     </div>
 
 </main>
