thanks.html added

--- a/project/thanks.html
+++ b/project/thanks.html
@@ -3,8 +3,8 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
-<title>Contact Page</title>
-<meta name="description" content="Contact page: Contact James De Guzman through mobile, phone and email">
+<title>Website Portfolio Homepage</title>
+<meta name="description" content="Home page: Landing page for my web portfolio site">
 <meta name="author" content="James Phillip K. De Guzman">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +20,6 @@
 <div class="page-wrap">
 
 <header>
-    <p id="window-size"></p>
 
     <nav class="navigation">
 
@@ -47,31 +46,17 @@
 
     <div class="hero">
         <div class="image-container">
-            <h1>Contact James</h1>
-            <img src="images/site-planning.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
+            <h1 id="hero-logo">besys.tech</h1>
+            <img src="images/besys-tech-logo.svg" alt="picture of a notebook with wireframe sketches" width="200" height="100">
         </div>
 
     </div>
 
     <div class="bottom-section">
-        <h2>Enter your contact details</h2>
-
-        <form action="thanks.html" method="get">
-            <div class="contact-section">
-                <label for="fname">Name*<input type="text" id="fname" name="fname" required></label>
-                <label for="mobile">Mobile
-                    <input type="tel" id="mobile">
-                </label>
-                <label for="telephone">Telephone
-                    <input type="tel" id="telephone">
-                </label>
-                <label for="email">Email*
-                    <input type="email" id="email" required>
-                </label>
-                <button id="submit">Sign me up</button>
-            </div>
-        </form>
-
+        <article class="my-company">
+        <h2>besys.tech</h2>
+        <p>Besys tech is the alternate name for James De Guzman's startup tech company, which  aims to create helpful websites and apps for my community. </p>
+        </article>
     </div>
 
 </main>
