thank you message added

--- a/project/thanks.html
+++ b/project/thanks.html
@@ -54,8 +54,8 @@
 
     <div class="bottom-section">
         <article class="my-company">
-        <h2>besys.tech</h2>
-        <p>Besys tech is the alternate name for James De Guzman's startup tech company, which  aims to create helpful websites and apps for my community. </p>
+        <h2>Thank you!</h2>
+        <p> We will contacting you very soon. </p>
         </article>
     </div>
 
