--- a/project/contact.html
+++ b/project/contact.html
@@ -56,7 +56,7 @@
     <div class="bottom-section">
         <h2>Enter your contact details</h2>
 
-        <form action="thanks.html" method="get">
+        <form action="thanks.html" method="get" id="signup-form">
             <div class="contact-section">
                 <label for="fname">Name*<input type="text" id="fname" name="fname" required></label>
                 <label for="mobile">Mobile
