corrected thank you message spelling

--- a/project/thanks.html
+++ b/project/thanks.html
@@ -55,7 +55,7 @@
     <div class="bottom-section">
         <article class="my-company">
         <h2>Thank you!</h2>
-        <p> We will contacting you very soon. </p>
+        <p> We will be contacting you very soon. </p>
         </article>
     </div>
 
